@@ -6,6 +6,7 @@
 * Optimized the way new blocks are written to disk (verification should be faster now)
 * Client: New TextUI command "purge", to purge unspendable records from UTXO-db
 * New tool "fetchblock" and new functions in "lib/others/utils" for fetching raw blocks from the web
+* UTXO index has now configurable length (via "lib/chain/UtxoIdxLen"), to address possible collision attacks (now set to 16 bytes)
 
 1.8.1
 * Client: each call to common.BlockChain.DeleteBranch() also does DelB2G() recursively
